--- a/Jsons/language/nl.json
+++ b/Jsons/language/nl.json
@@ -102,7 +102,7 @@
   "cal_persian_explanation": "De zonnekalender, die 365-366 dagen duurt, begint bij de lente-equinox (Nowruz).",
   "cal_balinese_explanation": "Een kalendersysteem dat gelijktijdige cycli combineert, waaronder een Pawukon-kalender van 210 dagen. Gebruikt voor religieuze ceremonies.",
   "cal_hebrew_explanation": "De lunisolaire kalender, met 12-13 maanden, begint bij de schepping (3761 v.Chr.). Deze wordt gebruikt voor religieuze plechtigheden.",
-  "cal_ethiopian_explanation": "De zonnekalender telt 13 maanden (12 van 30 dagen en 1 van 5-6 dagen), en loopt 7-8 jaar achter op de Gregoriaanse kalender.",
+  "cal_ethiopian_explanation": "De zonnekalender telt 13 maanden (12 van 30 dagen en 1 van 5-6 dagen) en loopt 7-8 jaar achter op de Gregoriaanse kalender.",
   "cal_creationist_explanation": "Het chronologische kader berekent de leeftijd van de aarde aan de hand van bijbelse geslachtsregisters en plaatst de schepping 6.000 tot 10.000 jaar geleden.",
   "cal_gregorian_usage": "Gebruik: 95% (officieel) - Wordt in bijna elk land gebruikt als burgerlijke kalender voor officiële en economische doeleinden.",
   "cal_islamic_usage": "Gebruik: 24% (religieus) - Wordt nageleefd door ongeveer 2 miljard moslims (ongeveer 24% van de wereldbevolking), voornamelijk tijdens religieuze feestdagen (Ramadan, Hajj, enz.).",
