--- a/Jsons/language/ja.json
+++ b/Jsons/language/ja.json
@@ -85,7 +85,7 @@
   "source_worldhistory": "世界史",
   "cal_name": "カレンダー：",
   "cal_availability_yes": "利用可能",
-  "cal_availability_no": "まだ準備ができていません（助けが必要です...貢献ウェブサイトはこちら）",
+  "cal_availability_no": "まだ準備ができていません (支援が必要です... 貢献ウェブサイトはこちら)",
   "cal_other": "カレンダー",
   "cal_usage": "使用法：",
   "cal_gregorian": "グレゴリオ暦",
@@ -96,11 +96,11 @@
   "cal_hebrew": "ヘブライ語",
   "cal_balinese": "バリ人",
   "cal_creationist": "創造論者",
-  "cal_gregorian_explanation": "1582 年に教皇グレゴリウス 13 世によって導入された、12 か月、365 ～ 366 日の太陽暦。",
+  "cal_gregorian_explanation": "太陽暦、12 か月、365 ～ 366 日、1582 年に教皇グレゴリウス 13 世によって導入されました。",
   "cal_islamic_explanation": "太陰暦（12 か月、354 ～ 355 日）は、ムハンマドのメディナへの移住（西暦 622 年）から始まります。",
   "cal_chinese_explanation": "太陰太陽暦は、太陰月、太陽年、そして12年周期の干支を組み合わせた暦です。東アジアの伝統的な祭りに用いられます。",
   "cal_persian_explanation": "太陽暦は 365 ～ 366 日で、春分 (ノウルーズ) から始まります。",
-  "cal_balinese_explanation": "210日間のパウコン暦を含む、同時周期を組み合わせた暦体系。宗教儀式に用いられる。",
+  "cal_balinese_explanation": "210日間のパウコン暦を含む、複数の周期を組み合わせた暦体系。宗教儀式に用いられる。",
   "cal_hebrew_explanation": "太陰太陽暦（12～13か月）は天地創造（紀元前3761年）から始まります。宗教行事に用いられます。",
   "cal_ethiopian_explanation": "太陽暦、13 か月 (30 日が 12 か月、5 ～ 6 日が 1 か月)、グレゴリオ暦より 7 ～ 8 年遅れています。",
   "cal_creationist_explanation": "年代順の枠組みで、聖書の系図から地球の年齢を計算し、創造を 6,000 ～ 10,000 年前に位置付けます。",
@@ -109,7 +109,7 @@
   "cal_chinese_usage": "使用率: 18% (文化的) - 旧正月などの祭りで約 14 億人の中国人がこれを祝います。",
   "cal_persian_usage": "使用率: 1.5% (民間/文化) - イラン (~8,900 万) とアフガニスタン (~4,100 万) の公式カレンダー。",
   "cal_balinese_usage": "使用率: 1.5% (民間) - エチオピア(~126M)で公用語、エリトリアで使用。",
-  "cal_hebrew_usage": "使用状況: 0.2% (宗教的) - ユダヤ人コミュニティ (約 1,600 万人) が宗教的な目的で使用しています。",
+  "cal_hebrew_usage": "使用率: 0.2% (宗教的) - ユダヤ人コミュニティ (約 1,600 万人) が宗教的な目的で使用しています。",
   "cal_ethiopian_usage": "使用率: <0.1% (文化的) - 主にバリ島 (インドネシア) で使用されており、約 450 万人が使用しています。",
   "cal_creationist_usage": "使用率: <0.01% (ニッチ) - いくつかの原理主義キリスト教コミュニティで使用されています。",
   "tv_universe": "宇宙",
