--- a/Jsons/language/hi.json
+++ b/Jsons/language/hi.json
@@ -122,16 +122,16 @@
   "tv_history": "इतिहास",
   "tv_milenium": "पिछली सहस्राब्दी",
   "tv_century": "पिछली शताब्दी",
-  "tv_universe_wikipedia": "",
-  "tv_life_wikipedia": "",
-  "tv_dinosaurs_wikipedia": "",
-  "tv_apes_wikipedia": "",
-  "tv_homo_wikipedia": "",
-  "tv_humans_wikipedia": "",
-  "tv_language_wikipedia": "",
-  "tv_history_wikipedia": "",
-  "tv_milenium_wikipedia": "",
-  "tv_century_wikipedia": "",
+  "tv_universe_wikipedia": "ब्रह्मांड",
+  "tv_life_wikipedia": "प्रिकैम्ब्रियन",
+  "tv_dinosaurs_wikipedia": "मेसोज़ोइक",
+  "tv_apes_wikipedia": "होमिनिडे",
+  "tv_homo_wikipedia": "होमोसेक्सुअल",
+  "tv_humans_wikipedia": "इंसान",
+  "tv_language_wikipedia": "भाषा",
+  "tv_history_wikipedia": "लिखना",
+  "tv_milenium_wikipedia": "दूसरी सहस्राब्दी",
+  "tv_century_wikipedia": "20 वीं सदी",
   "tv_hadean": "हेडियन",
   "tv_archean": "आर्कियन",
   "tv_proterozoic": "प्रोटेरोज़ोइक",
@@ -139,13 +139,13 @@
   "tv_paleozoic": "पैलियोज़ोइक",
   "tv_mesozoic": "मेसोज़ोइक",
   "tv_cenozoic": "सेनोज़ोइक",
-  "tv_hadean_wikipedia": "",
-  "tv_archean_wikipedia": "",
-  "tv_proterozoic_wikipedia": "",
-  "tv_phanerozoic_wikipedia": "",
-  "tv_paleozoic_wikipedia": "",
-  "tv_mesozoic_wikipedia": "",
-  "tv_cenozoic_wikipedia": "",
+  "tv_hadean_wikipedia": "हेडियन",
+  "tv_archean_wikipedia": "आर्कियन",
+  "tv_proterozoic_wikipedia": "प्रोटेरोज़ोइक",
+  "tv_phanerozoic_wikipedia": "फैनेरोज़ोइक",
+  "tv_paleozoic_wikipedia": "पैलियोज़ोइक",
+  "tv_mesozoic_wikipedia": "मेसोज़ोइक",
+  "tv_cenozoic_wikipedia": "सेनोज़ोइक",
   "tv_stone": "पत्थर",
   "tv_bronze": "पीतल",
   "tv_iron": "लोहा",
@@ -155,15 +155,15 @@
   "tv_enlightenment": "प्रबोधन",
   "tv_industrial": "औद्योगिक",
   "tv_contemporary": "समकालीन",
-  "tv_stone_wikipedia": "",
-  "tv_bronze_wikipedia": "",
-  "tv_iron_wikipedia": "",
-  "tv_antiquity_wikipedia": "",
-  "tv_middle ages_wikipedia": "",
-  "tv_renaissance_wikipedia": "",
-  "tv_enlightenment_wikipedia": "",
-  "tv_industrial_wikipedia": "",
-  "tv_contemporary_wikipedia": "",
+  "tv_stone_wikipedia": "पाषाण युग",
+  "tv_bronze_wikipedia": "कांस्य - युग",
+  "tv_iron_wikipedia": "लौह युग",
+  "tv_antiquity_wikipedia": "प्राचीन इतिहास",
+  "tv_middle ages_wikipedia": "मध्य युग",
+  "tv_renaissance_wikipedia": "पुनर्जागरण",
+  "tv_enlightenment_wikipedia": "ज्ञानोदय का युग",
+  "tv_industrial_wikipedia": "औद्योगिक क्रांति",
+  "tv_contemporary_wikipedia": "समकालीन इतिहास",
   "tv_1300s": "1300-talet",
   "tv_1310s": "1310-talet",
   "tv_1320s": "1320-talet",
@@ -237,79 +237,79 @@
   "tv_2000s": "2000-talet",
   "tv_2010s": "2010-talet",
   "tv_2020s": "2020-talet",
-  "tv_1300s_wikipedia": "",
-  "tv_1310s_wikipedia": "",
-  "tv_1320s_wikipedia": "",
-  "tv_1330s_wikipedia": "",
-  "tv_1340s_wikipedia": "",
-  "tv_1350s_wikipedia": "",
-  "tv_1360s_wikipedia": "",
-  "tv_1370s_wikipedia": "",
-  "tv_1380s_wikipedia": "",
-  "tv_1390s_wikipedia": "",
-  "tv_1400s_wikipedia": "",
-  "tv_1410s_wikipedia": "",
-  "tv_1420s_wikipedia": "",
-  "tv_1430s_wikipedia": "",
-  "tv_1440s_wikipedia": "",
-  "tv_1450s_wikipedia": "",
-  "tv_1460s_wikipedia": "",
-  "tv_1470s_wikipedia": "",
-  "tv_1480s_wikipedia": "",
-  "tv_1490s_wikipedia": "",
-  "tv_1500s_wikipedia": "",
-  "tv_1510s_wikipedia": "",
-  "tv_1520s_wikipedia": "",
-  "tv_1530s_wikipedia": "",
-  "tv_1540s_wikipedia": "",
-  "tv_1550s_wikipedia": "",
-  "tv_1560s_wikipedia": "",
-  "tv_1570s_wikipedia": "",
-  "tv_1580s_wikipedia": "",
-  "tv_1590s_wikipedia": "",
-  "tv_1600s_wikipedia": "",
-  "tv_1610s_wikipedia": "",
-  "tv_1620s_wikipedia": "",
-  "tv_1630s_wikipedia": "",
-  "tv_1640s_wikipedia": "",
-  "tv_1650s_wikipedia": "",
-  "tv_1660s_wikipedia": "",
-  "tv_1670s_wikipedia": "",
-  "tv_1680s_wikipedia": "",
-  "tv_1690s_wikipedia": "",
-  "tv_1700s_wikipedia": "",
-  "tv_1710s_wikipedia": "",
-  "tv_1720s_wikipedia": "",
-  "tv_1730s_wikipedia": "",
-  "tv_1740s_wikipedia": "",
-  "tv_1750s_wikipedia": "",
-  "tv_1760s_wikipedia": "",
-  "tv_1770s_wikipedia": "",
-  "tv_1780s_wikipedia": "",
-  "tv_1790s_wikipedia": "",
-  "tv_1800s_wikipedia": "",
-  "tv_1810s_wikipedia": "",
-  "tv_1820s_wikipedia": "",
-  "tv_1830s_wikipedia": "",
-  "tv_1840s_wikipedia": "",
-  "tv_1850s_wikipedia": "",
-  "tv_1860s_wikipedia": "",
-  "tv_1870s_wikipedia": "",
-  "tv_1880s_wikipedia": "",
-  "tv_1890s_wikipedia": "",
-  "tv_1900s_wikipedia": "",
-  "tv_1910s_wikipedia": "",
-  "tv_1920s_wikipedia": "",
-  "tv_1930s_wikipedia": "",
-  "tv_1940s_wikipedia": "",
-  "tv_1950s_wikipedia": "",
-  "tv_1960s_wikipedia": "",
-  "tv_1970s_wikipedia": "",
-  "tv_1980s_wikipedia": "",
-  "tv_1990s_wikipedia": "",
-  "tv_2000s_wikipedia": "",
-  "tv_2010s_wikipedia": "",
-  "tv_2020s_wikipedia": "",
+  "tv_1300s_wikipedia": "1300s",
+  "tv_1310s_wikipedia": "1310s",
+  "tv_1320s_wikipedia": "1320s",
+  "tv_1330s_wikipedia": "1330s",
+  "tv_1340s_wikipedia": "1340s",
+  "tv_1350s_wikipedia": "1350s",
+  "tv_1360s_wikipedia": "1360s",
+  "tv_1370s_wikipedia": "1370s",
+  "tv_1380s_wikipedia": "1380s",
+  "tv_1390s_wikipedia": "1390s",
+  "tv_1400s_wikipedia": "1400s",
+  "tv_1410s_wikipedia": "1410s",
+  "tv_1420s_wikipedia": "1420s",
+  "tv_1430s_wikipedia": "1430s",
+  "tv_1440s_wikipedia": "1440s",
+  "tv_1450s_wikipedia": "1450s",
+  "tv_1460s_wikipedia": "1460s",
+  "tv_1470s_wikipedia": "1470s",
+  "tv_1480s_wikipedia": "1480s",
+  "tv_1490s_wikipedia": "1490s",
+  "tv_1500s_wikipedia": "1500s",
+  "tv_1510s_wikipedia": "1510s",
+  "tv_1520s_wikipedia": "1520s",
+  "tv_1530s_wikipedia": "1530s",
+  "tv_1540s_wikipedia": "1540s",
+  "tv_1550s_wikipedia": "1550s",
+  "tv_1560s_wikipedia": "1560s",
+  "tv_1570s_wikipedia": "1570s",
+  "tv_1580s_wikipedia": "1580s",
+  "tv_1590s_wikipedia": "1590s",
+  "tv_1600s_wikipedia": "1600s",
+  "tv_1610s_wikipedia": "1610s",
+  "tv_1620s_wikipedia": "1620s",
+  "tv_1630s_wikipedia": "1630s",
+  "tv_1640s_wikipedia": "1640s",
+  "tv_1650s_wikipedia": "1650s",
+  "tv_1660s_wikipedia": "1660s",
+  "tv_1670s_wikipedia": "1670s",
+  "tv_1680s_wikipedia": "1680s",
+  "tv_1690s_wikipedia": "1690s",
+  "tv_1700s_wikipedia": "1700s",
+  "tv_1710s_wikipedia": "1710s",
+  "tv_1720s_wikipedia": "1720s",
+  "tv_1730s_wikipedia": "1730s",
+  "tv_1740s_wikipedia": "1740s",
+  "tv_1750s_wikipedia": "1750s",
+  "tv_1760s_wikipedia": "1760s",
+  "tv_1770s_wikipedia": "1770s",
+  "tv_1780s_wikipedia": "1780s",
+  "tv_1790s_wikipedia": "1790s",
+  "tv_1800s_wikipedia": "1800s",
+  "tv_1810s_wikipedia": "1810s",
+  "tv_1820s_wikipedia": "1820s",
+  "tv_1830s_wikipedia": "1830s",
+  "tv_1840s_wikipedia": "1840s",
+  "tv_1850s_wikipedia": "1850s",
+  "tv_1860s_wikipedia": "1860s",
+  "tv_1870s_wikipedia": "1870s",
+  "tv_1880s_wikipedia": "1880s",
+  "tv_1890s_wikipedia": "1890s",
+  "tv_1900s_wikipedia": "1900s",
+  "tv_1910s_wikipedia": "1910s",
+  "tv_1920s_wikipedia": "1920s",
+  "tv_1930s_wikipedia": "1930s",
+  "tv_1940s_wikipedia": "1940s",
+  "tv_1950s_wikipedia": "1950s",
+  "tv_1960s_wikipedia": "1960s",
+  "tv_1970s_wikipedia": "1970s",
+  "tv_1980s_wikipedia": "1980s",
+  "tv_1990s_wikipedia": "1990s",
+  "tv_2000s_wikipedia": "2000s",
+  "tv_2010s_wikipedia": "2010s",
+  "tv_2020s_wikipedia": "2020s",
   "account_login": "लॉग इन करें",
   "account_email": "ईमेल",
   "account_email_placeholder": "अपना ईमेल दर्ज करें",
