--- a/Jsons/language/fr.json
+++ b/Jsons/language/fr.json
@@ -110,7 +110,7 @@
   "cal_persian_usage": "Utilisation : 1,5 % (civil/culturel) - Calendrier officiel en Iran (~89 millions) et en Afghanistan (~41 millions).",
   "cal_balinese_usage": "Utilisation : 1,5 % (civil) - Officiel en Éthiopie (~126 millions) et utilisé en Érythrée.",
   "cal_hebrew_usage": "Utilisation : 0,2 % (religieux) - Utilisé par les communautés juives (~16 millions de personnes) à des fins religieuses.",
-  "cal_ethiopian_usage": "Usage : <0,1 % (culturel) - Principalement utilisé à Bali (Indonésie), environ 4,5 millions de personnes.",
+  "cal_ethiopian_usage": "Usage : <0,1 % (culturel) - Principalement utilisé à Bali (Indonésie), par environ 4,5 millions de personnes.",
   "cal_creationist_usage": "Utilisation : <0,01 % (niche) - Utilisé par quelques communautés chrétiennes fondamentalistes.",
   "tv_universe": "Univers",
   "tv_life": "Vie",
@@ -122,16 +122,16 @@
   "tv_history": "Histoire",
   "tv_milenium": "Millénaire",
   "tv_century": "Siècle",
-  "tv_universe_wikipedia": "",
-  "tv_life_wikipedia": "",
-  "tv_dinosaurs_wikipedia": "",
-  "tv_apes_wikipedia": "",
-  "tv_homo_wikipedia": "",
-  "tv_humans_wikipedia": "",
-  "tv_language_wikipedia": "",
-  "tv_history_wikipedia": "",
-  "tv_milenium_wikipedia": "",
-  "tv_century_wikipedia": "",
+  "tv_universe_wikipedia": "Univers",
+  "tv_life_wikipedia": "Précambrien",
+  "tv_dinosaurs_wikipedia": "Mésozoïque",
+  "tv_apes_wikipedia": "Hominidés",
+  "tv_homo_wikipedia": "Homo",
+  "tv_humans_wikipedia": "Humain",
+  "tv_language_wikipedia": "Langue",
+  "tv_history_wikipedia": "En écrivant",
+  "tv_milenium_wikipedia": "2e millénaire",
+  "tv_century_wikipedia": "XXe siècle",
   "tv_hadean": "Hadéen",
   "tv_archean": "Archéen",
   "tv_proterozoic": "Protérozoïque",
@@ -139,13 +139,13 @@
   "tv_paleozoic": "Paléozoïque",
   "tv_mesozoic": "Mésozoïque",
   "tv_cenozoic": "Cénozoïque",
-  "tv_hadean_wikipedia": "",
-  "tv_archean_wikipedia": "",
-  "tv_proterozoic_wikipedia": "",
-  "tv_phanerozoic_wikipedia": "",
-  "tv_paleozoic_wikipedia": "",
-  "tv_mesozoic_wikipedia": "",
-  "tv_cenozoic_wikipedia": "",
+  "tv_hadean_wikipedia": "Hadéen",
+  "tv_archean_wikipedia": "Archéen",
+  "tv_proterozoic_wikipedia": "Protérozoïque",
+  "tv_phanerozoic_wikipedia": "Phanérozoïque",
+  "tv_paleozoic_wikipedia": "Paléozoïque",
+  "tv_mesozoic_wikipedia": "Mésozoïque",
+  "tv_cenozoic_wikipedia": "Cénozoïque",
   "tv_stone": "Pierre",
   "tv_bronze": "Bronze",
   "tv_iron": "Fer",
@@ -155,15 +155,15 @@
   "tv_enlightenment": "Éclaircissement",
   "tv_industrial": "Industriel",
   "tv_contemporary": "Contemporain",
-  "tv_stone_wikipedia": "",
-  "tv_bronze_wikipedia": "",
-  "tv_iron_wikipedia": "",
-  "tv_antiquity_wikipedia": "",
-  "tv_middle ages_wikipedia": "",
-  "tv_renaissance_wikipedia": "",
-  "tv_enlightenment_wikipedia": "",
-  "tv_industrial_wikipedia": "",
-  "tv_contemporary_wikipedia": "",
+  "tv_stone_wikipedia": "Âge de pierre",
+  "tv_bronze_wikipedia": "Âge du bronze",
+  "tv_iron_wikipedia": "Âge du fer",
+  "tv_antiquity_wikipedia": "Histoire ancienne",
+  "tv_middle ages_wikipedia": "Moyen-âge",
+  "tv_renaissance_wikipedia": "Renaissance",
+  "tv_enlightenment_wikipedia": "Siècle des Lumières",
+  "tv_industrial_wikipedia": "Révolution industrielle",
+  "tv_contemporary_wikipedia": "Histoire contemporaine",
   "tv_1300s": "années 1300",
   "tv_1310s": "années 1310",
   "tv_1320s": "années 1320",
@@ -237,99 +237,99 @@
   "tv_2000s": "années 2000",
   "tv_2010s": "années 2010",
   "tv_2020s": "années 2020",
-  "tv_1300s_wikipedia": "Années_1300",
-  "tv_1310s_wikipedia": "Années_1310",
-  "tv_1320s_wikipedia": "Années_1320",
-  "tv_1330s_wikipedia": "Années_1330",
-  "tv_1340s_wikipedia": "Années_1340",
-  "tv_1350s_wikipedia": "Années_1350",
-  "tv_1360s_wikipedia": "Années_1360",
-  "tv_1370s_wikipedia": "Années_1370",
-  "tv_1380s_wikipedia": "Années_1380",
-  "tv_1390s_wikipedia": "Années_1390",
-  "tv_1400s_wikipedia": "Années_1400",
-  "tv_1410s_wikipedia": "Années_1410",
-  "tv_1420s_wikipedia": "Années_1420",
-  "tv_1430s_wikipedia": "Années_1430",
-  "tv_1440s_wikipedia": "Années_1440",
-  "tv_1450s_wikipedia": "Années_1450",
-  "tv_1460s_wikipedia": "Années_1460",
-  "tv_1470s_wikipedia": "Années_1470",
-  "tv_1480s_wikipedia": "Années_1480",
-  "tv_1490s_wikipedia": "Années_1490",
-  "tv_1500s_wikipedia": "Années_1500",
-  "tv_1510s_wikipedia": "Années_1510",
-  "tv_1520s_wikipedia": "Années_1520",
-  "tv_1530s_wikipedia": "Années_1530",
-  "tv_1540s_wikipedia": "Années_1540",
-  "tv_1550s_wikipedia": "Années_1550",
-  "tv_1560s_wikipedia": "Années_1560",
-  "tv_1570s_wikipedia": "Années_1570",
-  "tv_1580s_wikipedia": "Années_1580",
-  "tv_1590s_wikipedia": "Années_1590",
-  "tv_1600s_wikipedia": "Années_1600",
-  "tv_1610s_wikipedia": "Années_1610",
-  "tv_1620s_wikipedia": "Années_1620",
-  "tv_1630s_wikipedia": "Années_1630",
-  "tv_1640s_wikipedia": "Années_1640",
-  "tv_1650s_wikipedia": "Années_1650",
-  "tv_1660s_wikipedia": "Années_1660",
-  "tv_1670s_wikipedia": "Années_1670",
-  "tv_1680s_wikipedia": "Années_1680",
-  "tv_1690s_wikipedia": "Années_1690",
-  "tv_1700s_wikipedia": "Années_1700",
-  "tv_1710s_wikipedia": "Années_1710",
-  "tv_1720s_wikipedia": "Années_1720",
-  "tv_1730s_wikipedia": "Années_1730",
-  "tv_1740s_wikipedia": "Années_1740",
-  "tv_1750s_wikipedia": "Années_1750",
-  "tv_1760s_wikipedia": "Années_1760",
-  "tv_1770s_wikipedia": "Années_1770",
-  "tv_1780s_wikipedia": "Années_1780",
-  "tv_1790s_wikipedia": "Années_1790",
-  "tv_1800s_wikipedia": "Années_1800",
-  "tv_1810s_wikipedia": "Années_1810",
-  "tv_1820s_wikipedia": "Années_1820",
-  "tv_1830s_wikipedia": "Années_1830",
-  "tv_1840s_wikipedia": "Années_1840",
-  "tv_1850s_wikipedia": "Années_1850",
-  "tv_1860s_wikipedia": "Années_1860",
-  "tv_1870s_wikipedia": "Années_1870",
-  "tv_1880s_wikipedia": "Années_1880",
-  "tv_1890s_wikipedia": "Années_1890",
-  "tv_1900s_wikipedia": "Années_1900",
-  "tv_1910s_wikipedia": "Années_1910",
-  "tv_1920s_wikipedia": "Années_1920",
-  "tv_1930s_wikipedia": "Années_1930",
-  "tv_1940s_wikipedia": "Années_1940",
-  "tv_1950s_wikipedia": "Années_1950",
-  "tv_1960s_wikipedia": "Années_1960",
-  "tv_1970s_wikipedia": "Années_1970",
-  "tv_1980s_wikipedia": "Années_1980",
-  "tv_1990s_wikipedia": "Années_1990",
-  "tv_2000s_wikipedia": "Années_2000",
-  "tv_2010s_wikipedia": "Années_2010",
-  "tv_2020s_wikipedia": "Années_2020",
-  "account_login": "Account.tsx",
-  "account_email": "Account.tsx",
-  "account_email_placeholder": "Account.tsx",
-  "account_password": "Account.tsx",
-  "account_password_placeholder": "Account.tsx",
-  "account_login_not_implemented": "Account.tsx",
-  "account_password_reset_not_implemented": "Account.tsx",
-  "account_forgot_password": "Account.tsx",
-  "settings_parameters": "SettingsParameters.tsx",
-  "settings_time": "SettingsTime.tsx",
-  "settings_timeviews": "SettingsTime.tsx",
-  "settings_timeline": "SettingsTime.tsx",
-  "settings_timeline_size": "SettingsTime.tsx",
-  "settings_categories": "SettingsTime.tsx",
-  "settings_categories_all": "SettingsTime.tsx",
-  "settings_region": "SettingsTime.tsx",
-  "settings_region_system": "SettingsTime.tsx",
-  "settings_region_custom": "SettingsTime.tsx",
-  "region_date": "TimeRegion.tsx",
-  "region_numbers": "TimeRegion.tsx",
-  "region_years": "TimeRegion.tsx",
-  "region_week_starts": "TimeRegion.tsx"
+  "tv_1300s_wikipedia": "Années 1300",
+  "tv_1310s_wikipedia": "Années 1310",
+  "tv_1320s_wikipedia": "Années 1320",
+  "tv_1330s_wikipedia": "Années 1330",
+  "tv_1340s_wikipedia": "Années 1340",
+  "tv_1350s_wikipedia": "Années 1350",
+  "tv_1360s_wikipedia": "Années 1360",
+  "tv_1370s_wikipedia": "Années 1370",
+  "tv_1380s_wikipedia": "Années 1380",
+  "tv_1390s_wikipedia": "Années 1390",
+  "tv_1400s_wikipedia": "Années 1400",
+  "tv_1410s_wikipedia": "Années 1410",
+  "tv_1420s_wikipedia": "Années 1420",
+  "tv_1430s_wikipedia": "Années 1430",
+  "tv_1440s_wikipedia": "Années 1440",
+  "tv_1450s_wikipedia": "Années 1450",
+  "tv_1460s_wikipedia": "Années 1460",
+  "tv_1470s_wikipedia": "Années 1470",
+  "tv_1480s_wikipedia": "Années 1480",
+  "tv_1490s_wikipedia": "Années 1490",
+  "tv_1500s_wikipedia": "Années 1500",
+  "tv_1510s_wikipedia": "Années 1510",
+  "tv_1520s_wikipedia": "Années 1520",
+  "tv_1530s_wikipedia": "Années 1530",
+  "tv_1540s_wikipedia": "Années 1540",
+  "tv_1550s_wikipedia": "Années 1550",
+  "tv_1560s_wikipedia": "Années 1560",
+  "tv_1570s_wikipedia": "Années 1570",
+  "tv_1580s_wikipedia": "Années 1580",
+  "tv_1590s_wikipedia": "Années 1590",
+  "tv_1600s_wikipedia": "Années 1600",
+  "tv_1610s_wikipedia": "Années 1610",
+  "tv_1620s_wikipedia": "Années 1620",
+  "tv_1630s_wikipedia": "Années 1630",
+  "tv_1640s_wikipedia": "Années 1640",
+  "tv_1650s_wikipedia": "Années 1650",
+  "tv_1660s_wikipedia": "Années 1660",
+  "tv_1670s_wikipedia": "Années 1670",
+  "tv_1680s_wikipedia": "Années 1680",
+  "tv_1690s_wikipedia": "Années 1690",
+  "tv_1700s_wikipedia": "Années 1700",
+  "tv_1710s_wikipedia": "Années 1710",
+  "tv_1720s_wikipedia": "Années 1720",
+  "tv_1730s_wikipedia": "Années 1730",
+  "tv_1740s_wikipedia": "Années 1740",
+  "tv_1750s_wikipedia": "Années 1750",
+  "tv_1760s_wikipedia": "Années 1760",
+  "tv_1770s_wikipedia": "Années 1770",
+  "tv_1780s_wikipedia": "Années 1780",
+  "tv_1790s_wikipedia": "Années 1790",
+  "tv_1800s_wikipedia": "Années 1800",
+  "tv_1810s_wikipedia": "Années 1810",
+  "tv_1820s_wikipedia": "Années 1820",
+  "tv_1830s_wikipedia": "Années 1830",
+  "tv_1840s_wikipedia": "Années 1840",
+  "tv_1850s_wikipedia": "Années 1850",
+  "tv_1860s_wikipedia": "Années 1860",
+  "tv_1870s_wikipedia": "Années 1870",
+  "tv_1880s_wikipedia": "Années 1880",
+  "tv_1890s_wikipedia": "Années 1890",
+  "tv_1900s_wikipedia": "Années 1900",
+  "tv_1910s_wikipedia": "Années 1910",
+  "tv_1920s_wikipedia": "Années 1920",
+  "tv_1930s_wikipedia": "Années 1930",
+  "tv_1940s_wikipedia": "Années 1940",
+  "tv_1950s_wikipedia": "Années 1950",
+  "tv_1960s_wikipedia": "Années 1960",
+  "tv_1970s_wikipedia": "Années 1970",
+  "tv_1980s_wikipedia": "Années 1980",
+  "tv_1990s_wikipedia": "Années 1990",
+  "tv_2000s_wikipedia": "Années 2000",
+  "tv_2010s_wikipedia": "Années 2010",
+  "tv_2020s_wikipedia": "Années 2020",
+  "account_login": "Se connecter",
+  "account_email": "E-mail",
+  "account_email_placeholder": "Saisissez votre adresse e-mail",
+  "account_password": "Mot de passe",
+  "account_password_placeholder": "Saisissez votre mot de passe",
+  "account_login_not_implemented": "La fonctionnalité de connexion n'est pas encore implémentée.",
+  "account_password_reset_not_implemented": "La fonctionnalité de réinitialisation du mot de passe n'est pas encore implémentée.",
+  "account_forgot_password": "Mot de passe oublié ?",
+  "settings_parameters": "Paramètres",
+  "settings_time": "Temps",
+  "settings_timeviews": "Timeviews",
+  "settings_timeline": "Chronologie",
+  "settings_timeline_size": "Taille",
+  "settings_categories": "Catégories",
+  "settings_categories_all": "Tous",
+  "settings_region": "Région",
+  "settings_region_system": "système",
+  "settings_region_custom": "coutume",
+  "region_date": "Date",
+  "region_numbers": "Nombres",
+  "region_years": "Années",
+  "region_week_starts": "La semaine commence"
 }
