--- a/Jsons/language/en.json
+++ b/Jsons/language/en.json
@@ -32,11 +32,11 @@
   "database_show": "Show database",
   "load": "Load Panels and Boxes",
   "cosmos_show": "Toggle Background",
-  "cat_being": "Being",
-  "cat_culture": "Culture",
-  "cat_power": "Power",
-  "cat_science": "Science",
-  "cat_trade": "Trade",
+  "cat_b": "Being",
+  "cat_c": "Culture",
+  "cat_p": "Power",
+  "cat_s": "Science",
+  "cat_t": "Trade",
   "settings": "Settings",
   "wikipedia": "Wikipedia",
   "toggle_wsbackgd": "Background",
@@ -65,7 +65,7 @@
   "cred_backend": "Cloud God: ",
   "cred_wikipedia": "Wikipedia Wizard: Sabat",
   "cred_project": "Mindfulness: Pierre",
-  "cred_sideral_guru": "Sideral Guru: Caro",
+  "cred_sideral": "Sideral Guru: Caro",
   "settings_source": "Source",
   "settings_sources": "Sources",
   "settings_academy": "Academy",
@@ -319,6 +319,7 @@
   "account_password_reset_not_implemented": "Password reset functionality not implemented yet",
   "account_forgot_password": "Forgot password?",
   "settings_parameters": "Parameters",
+  "system": "system",
   "settings_time": "Time",
   "settings_timeviews": "Timeviews",
   "settings_timeline": "Timeline",
@@ -331,5 +332,37 @@
   "region_date": "Date",
   "region_numbers": "Numbers",
   "region_years": "Years",
-  "region_week_starts": "Week starts"
+  "region_week_starts": "Week starts",
+  "date_order": "Date order",
+  "date_order_dmy": "Day/Month/Year (DMY)",
+  "date_order_mdy": "Month/Day/Year (MDY)",
+  "date_order_ymd": "Year/Month/Day (YMD)",
+  "number_format": "Number format",
+  "year_suffixes": "Year suffixes",
+  "year_suffixes_bmk": "B/M/K (English)",
+  "year_suffixes_gama": "Ga/Ma (Scientific)",
+  "year_suffixes_mrd": "Mrd/Mio/T (German)",
+  "week_starts": "Week starts on",
+  "monday": "Monday",
+  "sunday": "Sunday",
+  "mouse": "Mouse",
+  "mouse_drag": "Drag",
+  "mouse_wheel": "Wheel",
+  "pan_timeline": "Pan timeline",
+  "zoom_at_cursor": "Zoom at cursor",
+  "pan_sensitivity": "Pan sensitivity",
+  "enable_inertia": "Momentum after drag",
+  "touch": "Touch",
+  "drag_touch": "Drag",
+  "pan": "Pan",
+  "pinch_touch": "Pinch",
+  "zoom_in_out": "Zoom in/out",
+  "zoom_sensitivity": "Pinch sensitivity",
+  "enable_pinch_zoom": "pinch to zoom",
+  "keyboard": "Keyboard",
+  "pan_left_right": "Pan left/right",
+  "fast_pan": "Fast pan (5x)",
+  "jump_to_present": "Jump to present",
+  "reset_zoom": "Reset zoom",
+  "invert_arrow_keys": "Invert arrow keys"
 }
