--- a/Jsons/language/es.json
+++ b/Jsons/language/es.json
@@ -32,11 +32,11 @@
   "database_show": "Mostrar base de datos",
   "load": "Paneles y cajas de carga",
   "cosmos_show": "Cambiar fondo",
-  "cat_being": "Ser",
-  "cat_culture": "Cultura",
-  "cat_power": "Fuerza",
-  "cat_science": "Ciencia",
-  "cat_trade": "Comercio",
+  "cat_b": "Ser",
+  "cat_c": "Cultura",
+  "cat_p": "Fuerza",
+  "cat_s": "Ciencia",
+  "cat_t": "Comercio",
   "settings": "Ajustes",
   "wikipedia": "Wikipedia",
   "toggle_wsbackgd": "Fondo",
@@ -65,7 +65,7 @@
   "cred_backend": "Dios de la nube:",
   "cred_wikipedia": "Asistente de Wikipedia: Sabat",
   "cred_project": "Atención plena: Pierre",
-  "cred_sideral_guru": "Gurú Sideral: Caro",
+  "cred_sideral": "Gurú Sideral: Caro",
   "settings_source": "Fuente",
   "settings_sources": "Fuentes",
   "settings_academy": "Academia",
@@ -319,6 +319,7 @@
   "account_password_reset_not_implemented": "La funcionalidad de restablecimiento de contraseña aún no está implementada",
   "account_forgot_password": "¿Has olvidado tu contraseña?",
   "settings_parameters": "Parámetros",
+  "system": "sistema",
   "settings_time": "Tiempo",
   "settings_timeviews": "Vistas de tiempo",
   "settings_timeline": "Cronología",
@@ -331,5 +332,37 @@
   "region_date": "Fecha",
   "region_numbers": "Números",
   "region_years": "Años",
-  "region_week_starts": "La semana comienza"
+  "region_week_starts": "La semana comienza",
+  "date_order": "Orden de fecha",
+  "date_order_dmy": "Día/Mes/Año (DMY)",
+  "date_order_mdy": "Mes/Día/Año (MDY)",
+  "date_order_ymd": "Año/Mes/Día (YMD)",
+  "number_format": "Formato de número",
+  "year_suffixes": "Sufijos de año",
+  "year_suffixes_bmk": "B/M/K (Inglés)",
+  "year_suffixes_gama": "Ga/Ma (Científico)",
+  "year_suffixes_mrd": "Mrd/Mio/T (alemán)",
+  "week_starts": "La semana empieza el",
+  "monday": "Lunes",
+  "sunday": "Domingo",
+  "mouse": "Ratón",
+  "mouse_drag": "Arrastrar",
+  "mouse_wheel": "Rueda",
+  "pan_timeline": "Línea de tiempo de Pan",
+  "zoom_at_cursor": "Zoom en el cursor",
+  "pan_sensitivity": "Sensibilidad panorámica",
+  "enable_inertia": "Impulso después del arrastre",
+  "touch": "Tocar",
+  "drag_touch": "Arrastrar",
+  "pan": "Cacerola",
+  "pinch_touch": "Pellizco",
+  "zoom_in_out": "Acercar/alejar",
+  "zoom_sensitivity": "Sensibilidad al pellizco",
+  "enable_pinch_zoom": "pellizcar para hacer zoom",
+  "keyboard": "Teclado",
+  "pan_left_right": "Panorámica hacia la izquierda/derecha",
+  "fast_pan": "Panorámica rápida (5x)",
+  "jump_to_present": "Saltar al presente",
+  "reset_zoom": "Restablecer zoom",
+  "invert_arrow_keys": "Invertir teclas de flecha"
 }
