--- a/Jsons/language/fr.json
+++ b/Jsons/language/fr.json
@@ -32,11 +32,11 @@
   "database_show": "Afficher la base de données",
   "load": "Panneaux et boîtes de chargement",
   "cosmos_show": "Basculer l'arrière-plan",
-  "cat_being": "Être",
-  "cat_culture": "Culture",
-  "cat_power": "Pouvoir",
-  "cat_science": "Science",
-  "cat_trade": "Commerce",
+  "cat_b": "Être",
+  "cat_c": "Culture",
+  "cat_p": "Pouvoir",
+  "cat_s": "Science",
+  "cat_t": "Commerce",
   "settings": "Paramètres",
   "wikipedia": "Wikipédia",
   "toggle_wsbackgd": "Arrière-plan",
@@ -65,7 +65,7 @@
   "cred_backend": "Dieu des nuages ​​: ",
   "cred_wikipedia": "Sorcier de Wikipédia : Sabat",
   "cred_project": "Pleine conscience : Pierre",
-  "cred_sideral_guru": "Guru Sidéral : Caro",
+  "cred_sideral": "Guru Sidéral : Caro",
   "settings_source": "Source",
   "settings_sources": "Sources",
   "settings_academy": "Académie",
@@ -319,6 +319,7 @@
   "account_password_reset_not_implemented": "La fonctionnalité de réinitialisation du mot de passe n'est pas encore implémentée.",
   "account_forgot_password": "Mot de passe oublié ?",
   "settings_parameters": "Paramètres",
+  "system": "système",
   "settings_time": "Temps",
   "settings_timeviews": "Timeviews",
   "settings_timeline": "Chronologie",
@@ -331,5 +332,37 @@
   "region_date": "Date",
   "region_numbers": "Nombres",
   "region_years": "Années",
-  "region_week_starts": "La semaine commence"
+  "region_week_starts": "La semaine commence",
+  "date_order": "Ordre des dates",
+  "date_order_dmy": "Jour/Mois/Année (JJ/MM/AAAA)",
+  "date_order_mdy": "Mois/Jour/Année (MDY)",
+  "date_order_ymd": "Année/Mois/Jour (AAAA)",
+  "number_format": "Format numérique",
+  "year_suffixes": "Suffixes d'année",
+  "year_suffixes_bmk": "B/M/K (Anglais)",
+  "year_suffixes_gama": "Ga/Ma (Scientifique)",
+  "year_suffixes_mrd": "Mrd/Mio/T (allemand)",
+  "week_starts": "La semaine commence le",
+  "monday": "Lundi",
+  "sunday": "Dimanche",
+  "mouse": "Souris",
+  "mouse_drag": "Traîner",
+  "mouse_wheel": "Roue",
+  "pan_timeline": "Chronologie panoramique",
+  "zoom_at_cursor": "Zoomer au niveau du curseur",
+  "pan_sensitivity": "Sensibilité pan",
+  "enable_inertia": "L'élan après la traînée",
+  "touch": "Touche",
+  "drag_touch": "Traîner",
+  "pan": "Poêle",
+  "pinch_touch": "Pincer",
+  "zoom_in_out": "Zoom avant/arrière",
+  "zoom_sensitivity": "Sensibilité au pincement",
+  "enable_pinch_zoom": "Pincez pour zoomer",
+  "keyboard": "Clavier",
+  "pan_left_right": "Déplacer vers la gauche/droite",
+  "fast_pan": "Poêle rapide (5x)",
+  "jump_to_present": "Aller au présent",
+  "reset_zoom": "Réinitialiser le zoom",
+  "invert_arrow_keys": "Inverser les touches fléchées"
 }
