--- a/Jsons/language/it.json
+++ b/Jsons/language/it.json
@@ -32,11 +32,11 @@
   "database_show": "Mostra database",
   "load": "Pannelli e scatole di carico",
   "cosmos_show": "Attiva/disattiva sfondo",
-  "cat_being": "Essendo",
-  "cat_culture": "Cultura",
-  "cat_power": "Energia",
-  "cat_science": "Scienza",
-  "cat_trade": "Commercio",
+  "cat_b": "Essendo",
+  "cat_c": "Cultura",
+  "cat_p": "Energia",
+  "cat_s": "Scienza",
+  "cat_t": "Commercio",
   "settings": "Impostazioni",
   "wikipedia": "Wikipedia",
   "toggle_wsbackgd": "Sfondo",
@@ -65,7 +65,7 @@
   "cred_backend": "Dio delle nuvole:",
   "cred_wikipedia": "Wikipedia Wizard: Sabat",
   "cred_project": "Consapevolezza: Pierre",
-  "cred_sideral_guru": "Guru Siderale: Caro",
+  "cred_sideral": "Guru Siderale: Caro",
   "settings_source": "Fonte",
   "settings_sources": "Fonti",
   "settings_academy": "Accademia",
@@ -319,6 +319,7 @@
   "account_password_reset_not_implemented": "La funzionalità di reimpostazione della password non è ancora implementata",
   "account_forgot_password": "Ha dimenticato la password?",
   "settings_parameters": "Parametri",
+  "system": "sistema",
   "settings_time": "Tempo",
   "settings_timeviews": "Visualizzazioni temporali",
   "settings_timeline": "Cronologia",
@@ -331,5 +332,37 @@
   "region_date": "Data",
   "region_numbers": "Numeri",
   "region_years": "Anni",
-  "region_week_starts": "La settimana inizia"
+  "region_week_starts": "La settimana inizia",
+  "date_order": "Ordine di data",
+  "date_order_dmy": "Giorno/Mese/Anno (DMY)",
+  "date_order_mdy": "Mese/Giorno/Anno (MDY)",
+  "date_order_ymd": "Anno/Mese/Giorno (YMD)",
+  "number_format": "Formato numerico",
+  "year_suffixes": "Suffissi dell'anno",
+  "year_suffixes_bmk": "B/M/K (inglese)",
+  "year_suffixes_gama": "Ga/Ma (scientifico)",
+  "year_suffixes_mrd": "Mrd/Mio/T (tedesco)",
+  "week_starts": "La settimana inizia il",
+  "monday": "Lunedi",
+  "sunday": "Domenica",
+  "mouse": "Topo",
+  "mouse_drag": "Lagna",
+  "mouse_wheel": "Ruota",
+  "pan_timeline": "Panoramica della cronologia",
+  "zoom_at_cursor": "Zoom sul cursore",
+  "pan_sensitivity": "Sensibilità panoramica",
+  "enable_inertia": "Momento dopo il trascinamento",
+  "touch": "Tocco",
+  "drag_touch": "Lagna",
+  "pan": "Padella",
+  "pinch_touch": "Pizzico",
+  "zoom_in_out": "Ingrandisci/riduci",
+  "zoom_sensitivity": "Sensibilità al pizzicore",
+  "enable_pinch_zoom": "pizzica per ingrandire",
+  "keyboard": "Tastiera",
+  "pan_left_right": "Panoramica a sinistra/destra",
+  "fast_pan": "Panoramica veloce (5x)",
+  "jump_to_present": "Vai al presente",
+  "reset_zoom": "Reimposta zoom",
+  "invert_arrow_keys": "Inverti i tasti freccia"
 }
