--- a/Jsons/language/nl.json
+++ b/Jsons/language/nl.json
@@ -32,11 +32,11 @@
   "database_show": "Toon database",
   "load": "Laadpanelen en -dozen",
   "cosmos_show": "Achtergrond weergeven/verbergen",
-  "cat_being": "Wezen",
-  "cat_culture": "Cultuur",
-  "cat_power": "Stroom",
-  "cat_science": "Wetenschap",
-  "cat_trade": "Handel",
+  "cat_b": "Wezen",
+  "cat_c": "Cultuur",
+  "cat_p": "Stroom",
+  "cat_s": "Wetenschap",
+  "cat_t": "Handel",
   "settings": "Instellingen",
   "wikipedia": "Wikipedia",
   "toggle_wsbackgd": "Achtergrond",
@@ -65,7 +65,7 @@
   "cred_backend": "Wolkengod:",
   "cred_wikipedia": "Wikipedia-tovenaar: Sabat",
   "cred_project": "Mindfulness: Pierre",
-  "cred_sideral_guru": "Siderale goeroe: Caro",
+  "cred_sideral": "Siderale goeroe: Caro",
   "settings_source": "Bron",
   "settings_sources": "Bronnen",
   "settings_academy": "Academie",
@@ -319,6 +319,7 @@
   "account_password_reset_not_implemented": "De functionaliteit voor het resetten van wachtwoorden is nog niet geïmplementeerd.",
   "account_forgot_password": "Wachtwoord vergeten?",
   "settings_parameters": "Parameters",
+  "system": "systeem",
   "settings_time": "Tijd",
   "settings_timeviews": "Tijdsbeelden",
   "settings_timeline": "Tijdlijn",
@@ -331,5 +332,37 @@
   "region_date": "Datum",
   "region_numbers": "Getallen",
   "region_years": "Jaren",
-  "region_week_starts": "De week begint"
+  "region_week_starts": "De week begint",
+  "date_order": "Datumvolgorde",
+  "date_order_dmy": "Dag/Maand/Jaar (DMY)",
+  "date_order_mdy": "Maand/Dag/Jaar (MDY)",
+  "date_order_ymd": "Jaar/Maand/Dag (JMD)",
+  "number_format": "Getalnotatie",
+  "year_suffixes": "Jaarachtervoegsels",
+  "year_suffixes_bmk": "B/M/K (Engels)",
+  "year_suffixes_gama": "Ga/Ma (Wetenschappelijk)",
+  "year_suffixes_mrd": "Mrd/Mio/T (Duits)",
+  "week_starts": "De week begint op",
+  "monday": "Maandag",
+  "sunday": "Zondag",
+  "mouse": "Muis",
+  "mouse_drag": "Sleuren",
+  "mouse_wheel": "Wiel",
+  "pan_timeline": "Pan-tijdlijn",
+  "zoom_at_cursor": "Zoom in op de cursor",
+  "pan_sensitivity": "Pan-gevoeligheid",
+  "enable_inertia": "Momentum na het slepen",
+  "touch": "Aanraken",
+  "drag_touch": "Sleuren",
+  "pan": "Pan",
+  "pinch_touch": "Kneep",
+  "zoom_in_out": "In-/uitzoomen",
+  "zoom_sensitivity": "Knijpgevoeligheid",
+  "enable_pinch_zoom": "knijp om in te zoomen",
+  "keyboard": "Toetsenbord",
+  "pan_left_right": "Pan naar links/rechts",
+  "fast_pan": "Snel pannen (5x)",
+  "jump_to_present": "Spring naar het heden",
+  "reset_zoom": "Zoom opnieuw instellen",
+  "invert_arrow_keys": "Keer de pijltjestoetsen om"
 }
