--- a/Jsons/language/ru.json
+++ b/Jsons/language/ru.json
@@ -32,11 +32,11 @@
   "database_show": "Показать базу данных",
   "load": "Загрузить панели и блоки",
   "cosmos_show": "Переключить фон",
-  "cat_being": "Существование",
-  "cat_culture": "Культура",
-  "cat_power": "Власть",
-  "cat_science": "Наука",
-  "cat_trade": "Торговля",
+  "cat_b": "Существование",
+  "cat_c": "Культура",
+  "cat_p": "Власть",
+  "cat_s": "Наука",
+  "cat_t": "Торговля",
   "settings": "Настройки",
   "wikipedia": "Википедия",
   "toggle_wsbackgd": "Фон",
@@ -65,7 +65,7 @@
   "cred_backend": "Бог Облаков:",
   "cred_wikipedia": "Википедия Волшебник: Сабат",
   "cred_project": "Осознанность: Пьер",
-  "cred_sideral_guru": "Сидеральный Гуру: Каро",
+  "cred_sideral": "Сидеральный Гуру: Каро",
   "settings_source": "Источник",
   "settings_sources": "Источники",
   "settings_academy": "Академия",
@@ -319,6 +319,7 @@
   "account_password_reset_not_implemented": "Функция сброса пароля пока не реализована.",
   "account_forgot_password": "Забыли пароль?",
   "settings_parameters": "Параметры",
+  "system": "система",
   "settings_time": "Время",
   "settings_timeviews": "Просмотры по времени",
   "settings_timeline": "Хронология",
@@ -331,5 +332,37 @@
   "region_date": "Дата",
   "region_numbers": "Числа",
   "region_years": "Годы",
-  "region_week_starts": "Неделя начинается"
+  "region_week_starts": "Неделя начинается",
+  "date_order": "Дата заказа",
+  "date_order_dmy": "День/Месяц/Год (ДМГ)",
+  "date_order_mdy": "Месяц/День/Год (МДД)",
+  "date_order_ymd": "Год/Месяц/День (ГМД)",
+  "number_format": "Формат чисел",
+  "year_suffixes": "суффиксы года",
+  "year_suffixes_bmk": "Б/М/К (английский)",
+  "year_suffixes_gama": "Ga/Ma (Научный)",
+  "year_suffixes_mrd": "Mrd/Mio/T (немецкий)",
+  "week_starts": "Неделя начинается",
+  "monday": "Понедельник",
+  "sunday": "Воскресенье",
+  "mouse": "Мышь",
+  "mouse_drag": "Тащить",
+  "mouse_wheel": "Колесо",
+  "pan_timeline": "Хронология Пана",
+  "zoom_at_cursor": "Увеличьте масштаб при наведении курсора",
+  "pan_sensitivity": "чувствительность панели",
+  "enable_inertia": "Импульс после торможения",
+  "touch": "Трогать",
+  "drag_touch": "Тащить",
+  "pan": "Кастрюля",
+  "pinch_touch": "Ущипнуть",
+  "zoom_in_out": "Увеличение/уменьшение масштаба",
+  "zoom_sensitivity": "Чувствительность к сжатию",
+  "enable_pinch_zoom": "масштабирование с помощью жеста \"щипок\"",
+  "keyboard": "Клавиатура",
+  "pan_left_right": "Панорамирование влево/вправо",
+  "fast_pan": "Быстрая сковорода (5x)",
+  "jump_to_present": "Перейти к настоящему",
+  "reset_zoom": "Сбросить масштаб",
+  "invert_arrow_keys": "Инвертировать клавиши со стрелками"
 }
