--- a/Jsons/language/sv.json
+++ b/Jsons/language/sv.json
@@ -32,11 +32,11 @@
   "database_show": "Visa databas",
   "load": "Lastpaneler och lådor",
   "cosmos_show": "Växla bakgrund",
-  "cat_being": "Varelse",
-  "cat_culture": "Kultur",
-  "cat_power": "Driva",
-  "cat_science": "Vetenskap",
-  "cat_trade": "Handel",
+  "cat_b": "Varelse",
+  "cat_c": "Kultur",
+  "cat_p": "Driva",
+  "cat_s": "Vetenskap",
+  "cat_t": "Handel",
   "settings": "Inställningar",
   "wikipedia": "Wikipedia",
   "toggle_wsbackgd": "Bakgrund",
@@ -65,7 +65,7 @@
   "cred_backend": "Molnguden:",
   "cred_wikipedia": "Wikipedia-trollkarlen: Sabat",
   "cred_project": "Mindfulness: Pierre",
-  "cred_sideral_guru": "Sideral Guru: Caro",
+  "cred_sideral": "Sideral Guru: Caro",
   "settings_source": "Källa",
   "settings_sources": "Källor",
   "settings_academy": "Akademi",
@@ -319,6 +319,7 @@
   "account_password_reset_not_implemented": "Funktionen för återställning av lösenord är ännu inte implementerad",
   "account_forgot_password": "Glömt lösenordet?",
   "settings_parameters": "Parametrar",
+  "system": "system",
   "settings_time": "Tid",
   "settings_timeviews": "Tidsvyer",
   "settings_timeline": "Tidslinje",
@@ -331,5 +332,37 @@
   "region_date": "Datum",
   "region_numbers": "Tal",
   "region_years": "År",
-  "region_week_starts": "Veckan börjar"
+  "region_week_starts": "Veckan börjar",
+  "date_order": "Datumordning",
+  "date_order_dmy": "Dag/Månad/År (DMY)",
+  "date_order_mdy": "Månad/Dag/År (MDY)",
+  "date_order_ymd": "År/Månad/Dag (YMD)",
+  "number_format": "Nummerformat",
+  "year_suffixes": "Årssuffix",
+  "year_suffixes_bmk": "B/M/K (engelska)",
+  "year_suffixes_gama": "Georgia/Massachusetts (vetenskaplig)",
+  "year_suffixes_mrd": "Mrd/Mio/T (tyska)",
+  "week_starts": "Veckan börjar på",
+  "monday": "måndag",
+  "sunday": "söndag",
+  "mouse": "Mus",
+  "mouse_drag": "Dra",
+  "mouse_wheel": "Hjul",
+  "pan_timeline": "Pan-tidslinje",
+  "zoom_at_cursor": "Zooma vid markören",
+  "pan_sensitivity": "Pan-känslighet",
+  "enable_inertia": "Momentum efter motstånd",
+  "touch": "Röra",
+  "drag_touch": "Dra",
+  "pan": "Panorera",
+  "pinch_touch": "Nypa",
+  "zoom_in_out": "Zooma in/ut",
+  "zoom_sensitivity": "Nypkänslighet",
+  "enable_pinch_zoom": "nyp för att zooma",
+  "keyboard": "Tangentbord",
+  "pan_left_right": "Panorera vänster/höger",
+  "fast_pan": "Snabb panorering (5x)",
+  "jump_to_present": "Hoppa till present",
+  "reset_zoom": "Återställ zoom",
+  "invert_arrow_keys": "Invertera piltangenter"
 }
