--- a/Jsons/language/uk.json
+++ b/Jsons/language/uk.json
@@ -32,11 +32,11 @@
   "database_show": "Показати базу даних",
   "load": "Завантажити панелі та блоки",
   "cosmos_show": "Перемкнути фон",
-  "cat_being": "Буття",
-  "cat_culture": "Культура",
-  "cat_power": "Влада",
-  "cat_science": "Наука",
-  "cat_trade": "Торгівля",
+  "cat_b": "Буття",
+  "cat_c": "Культура",
+  "cat_p": "Влада",
+  "cat_s": "Наука",
+  "cat_t": "Торгівля",
   "settings": "Налаштування",
   "wikipedia": "Вікіпедія",
   "toggle_wsbackgd": "Фон",
@@ -65,7 +65,7 @@
   "cred_backend": "Бог хмар:",
   "cred_wikipedia": "Чарівник Вікіпедії: Сабат",
   "cred_project": "Усвідомленість: П'єр",
-  "cred_sideral_guru": "Зоряний Гуру: Каро",
+  "cred_sideral": "Зоряний Гуру: Каро",
   "settings_source": "Джерело",
   "settings_sources": "Джерела",
   "settings_academy": "Академія",
@@ -319,6 +319,7 @@
   "account_password_reset_not_implemented": "Функція скидання пароля ще не реалізована",
   "account_forgot_password": "Забули пароль?",
   "settings_parameters": "Параметри",
+  "system": "система",
   "settings_time": "Час",
   "settings_timeviews": "Часові перегляди",
   "settings_timeline": "Хронологія",
@@ -331,5 +332,37 @@
   "region_date": "Дата",
   "region_numbers": "Числа",
   "region_years": "Роки",
-  "region_week_starts": "Початок тижня"
+  "region_week_starts": "Початок тижня",
+  "date_order": "Порядок дат",
+  "date_order_dmy": "День/Місяць/Рік (ДМГ)",
+  "date_order_mdy": "Місяць/День/Рік (MDY)",
+  "date_order_ymd": "Рік/Місяць/День (YMD)",
+  "number_format": "Числовий формат",
+  "year_suffixes": "Суфікси року",
+  "year_suffixes_bmk": "Б/М/К (англійська)",
+  "year_suffixes_gama": "Га/Ма (науковий)",
+  "year_suffixes_mrd": "Mrd/Mio/T (німецька)",
+  "week_starts": "Тиждень починається",
+  "monday": "Понеділок",
+  "sunday": "Неділя",
+  "mouse": "Миша",
+  "mouse_drag": "Перетягування",
+  "mouse_wheel": "Колесо",
+  "pan_timeline": "Панорамування часової шкали",
+  "zoom_at_cursor": "Масштабування курсора",
+  "pan_sensitivity": "Чутливість панорамування",
+  "enable_inertia": "Імпульс після опору",
+  "touch": "Дотик",
+  "drag_touch": "Перетягування",
+  "pan": "Пательня",
+  "pinch_touch": "Щіпка",
+  "zoom_in_out": "Збільшення/зменшення масштабу",
+  "zoom_sensitivity": "Чутливість до щипка",
+  "enable_pinch_zoom": "Збільшення за допомогою щіпки",
+  "keyboard": "Клавіатура",
+  "pan_left_right": "Панорамування вліво/вправо",
+  "fast_pan": "Швидке панорамування (5x)",
+  "jump_to_present": "Перейти до презентації",
+  "reset_zoom": "Скинути масштаб",
+  "invert_arrow_keys": "Інвертувати клавіші зі стрілками"
 }
