--- a/Jsons/language/zh.json
+++ b/Jsons/language/zh.json
@@ -32,11 +32,11 @@
   "database_show": "显示数据库",
   "load": "配电盘和配电箱",
   "cosmos_show": "切换背景",
-  "cat_being": "存在",
-  "cat_culture": "文化",
-  "cat_power": "力量",
-  "cat_science": "科学",
-  "cat_trade": "贸易",
+  "cat_b": "存在",
+  "cat_c": "文化",
+  "cat_p": "力量",
+  "cat_s": "科学",
+  "cat_t": "贸易",
   "settings": "设置",
   "wikipedia": "维基百科",
   "toggle_wsbackgd": "背景",
@@ -65,7 +65,7 @@
   "cred_backend": "云神：",
   "cred_wikipedia": "维基百科向导：萨巴特",
   "cred_project": "正念：皮埃尔",
-  "cred_sideral_guru": "星光大师：卡罗",
+  "cred_sideral": "星光大师：卡罗",
   "settings_source": "来源",
   "settings_sources": "来源",
   "settings_academy": "学院",
@@ -319,6 +319,7 @@
   "account_password_reset_not_implemented": "密码重置功能尚未实现",
   "account_forgot_password": "忘记密码？",
   "settings_parameters": "参数",
+  "system": "系统",
   "settings_time": "时间",
   "settings_timeviews": "时间视图",
   "settings_timeline": "时间线",
@@ -331,5 +332,37 @@
   "region_date": "日期",
   "region_numbers": "数字",
   "region_years": "年",
-  "region_week_starts": "一周开始"
+  "region_week_starts": "一周开始",
+  "date_order": "日期顺序",
+  "date_order_dmy": "日/月/年 (DMY)",
+  "date_order_mdy": "月/日/年 (MDY)",
+  "date_order_ymd": "年/月/日 (YMD)",
+  "number_format": "数字格式",
+  "year_suffixes": "年份后缀",
+  "year_suffixes_bmk": "B/M/K（英语）",
+  "year_suffixes_gama": "Ga/Ma（科学）",
+  "year_suffixes_mrd": "Mrd/Mio/T（德语）",
+  "week_starts": "一周从……开始",
+  "monday": "周一",
+  "sunday": "星期日",
+  "mouse": "老鼠",
+  "mouse_drag": "拖",
+  "mouse_wheel": "车轮",
+  "pan_timeline": "泛时间线",
+  "zoom_at_cursor": "光标处放大",
+  "pan_sensitivity": "泛敏感性",
+  "enable_inertia": "阻力后的动量",
+  "touch": "触碰",
+  "drag_touch": "拖",
+  "pan": "平底锅",
+  "pinch_touch": "捏",
+  "zoom_in_out": "放大/缩小",
+  "zoom_sensitivity": "捏合灵敏度",
+  "enable_pinch_zoom": "双指捏合缩放",
+  "keyboard": "键盘",
+  "pan_left_right": "向左/向右平移",
+  "fast_pan": "快速平移（5倍）",
+  "jump_to_present": "跳转至当前时间",
+  "reset_zoom": "重置缩放",
+  "invert_arrow_keys": "反转方向键"
 }
