--- a/Jsons/language/de.json
+++ b/Jsons/language/de.json
@@ -32,11 +32,11 @@
   "database_show": "Datenbank anzeigen",
   "load": "Lastpaneele und -kästen",
   "cosmos_show": "Hintergrund umschalten",
-  "cat_being": "Sein",
-  "cat_culture": "Kultur",
-  "cat_power": "Leistung",
-  "cat_science": "Wissenschaft",
-  "cat_trade": "Handel",
+  "cat_b": "Sein",
+  "cat_c": "Kultur",
+  "cat_p": "Leistung",
+  "cat_s": "Wissenschaft",
+  "cat_t": "Handel",
   "settings": "Einstellungen",
   "wikipedia": "Wikipedia",
   "toggle_wsbackgd": "Hintergrund",
@@ -65,7 +65,7 @@
   "cred_backend": "Wolkengott:",
   "cred_wikipedia": "Wikipedia-Zauberer: Sabat",
   "cred_project": "Achtsamkeit: Pierre",
-  "cred_sideral_guru": "Sideral Guru: Caro",
+  "cred_sideral": "Sideral Guru: Caro",
   "settings_source": "Quelle",
   "settings_sources": "Quellen",
   "settings_academy": "Akademie",
@@ -319,6 +319,7 @@
   "account_password_reset_not_implemented": "Die Funktion zum Zurücksetzen des Passworts ist noch nicht implementiert.",
   "account_forgot_password": "Passwort vergessen?",
   "settings_parameters": "Parameter",
+  "system": "System",
   "settings_time": "Zeit",
   "settings_timeviews": "Zeitansichten",
   "settings_timeline": "Zeitleiste",
@@ -331,5 +332,37 @@
   "region_date": "Datum",
   "region_numbers": "Zahlen",
   "region_years": "Jahre",
-  "region_week_starts": "Die Woche beginnt"
+  "region_week_starts": "Die Woche beginnt",
+  "date_order": "Datumsreihenfolge",
+  "date_order_dmy": "Tag/Monat/Jahr (TTJJ)",
+  "date_order_mdy": "Monat/Tag/Jahr (MDY)",
+  "date_order_ymd": "Jahr/Monat/Tag (JJJJJ)",
+  "number_format": "Zahlenformat",
+  "year_suffixes": "Jahreszusätze",
+  "year_suffixes_bmk": "B/M/K (Englisch)",
+  "year_suffixes_gama": "Ga/Ma (wissenschaftlich)",
+  "year_suffixes_mrd": "Mrd/Mio/T (Deutsch)",
+  "week_starts": "Die Woche beginnt am",
+  "monday": "Montag",
+  "sunday": "Sonntag",
+  "mouse": "Maus",
+  "mouse_drag": "Ziehen",
+  "mouse_wheel": "Rad",
+  "pan_timeline": "Pan-Zeitleiste",
+  "zoom_at_cursor": "Zoomen Sie am Cursor",
+  "pan_sensitivity": "Pan-Empfindlichkeit",
+  "enable_inertia": "Impuls nach dem Bremsvorgang",
+  "touch": "Berühren",
+  "drag_touch": "Ziehen",
+  "pan": "Pfanne",
+  "pinch_touch": "Prise",
+  "zoom_in_out": "Vergrößern/Verkleinern",
+  "zoom_sensitivity": "Kneifempfindlichkeit",
+  "enable_pinch_zoom": "Zum Vergrößern zusammenziehen",
+  "keyboard": "Tastatur",
+  "pan_left_right": "Schwenken Sie nach links/rechts",
+  "fast_pan": "Schnellpfanne (5x)",
+  "jump_to_present": "Zur Gegenwart springen",
+  "reset_zoom": "Zoom zurücksetzen",
+  "invert_arrow_keys": "Pfeiltasten umkehren"
 }
