--- a/Jsons/language/hi.json
+++ b/Jsons/language/hi.json
@@ -32,11 +32,11 @@
   "database_show": "डेटाबेस दिखाएँ",
   "load": "लोड पैनल और बॉक्स",
   "cosmos_show": "पृष्ठभूमि को टॉगल करें",
-  "cat_being": "प्राणी",
-  "cat_culture": "संस्कृति",
-  "cat_power": "शक्ति",
-  "cat_science": "विज्ञान",
-  "cat_trade": "व्यापार",
+  "cat_b": "प्राणी",
+  "cat_c": "संस्कृति",
+  "cat_p": "शक्ति",
+  "cat_s": "विज्ञान",
+  "cat_t": "व्यापार",
   "settings": "सेटिंग्स",
   "wikipedia": "विकिपीडिया",
   "toggle_wsbackgd": "पृष्ठभूमि",
@@ -65,7 +65,7 @@
   "cred_backend": "बादल देवता:",
   "cred_wikipedia": "विकिपीडिया विज़ार्ड: सबैट",
   "cred_project": "ध्यान: पियरे",
-  "cred_sideral_guru": "साइडरल गुरु: कैरो",
+  "cred_sideral": "साइडरल गुरु: कैरो",
   "settings_source": "स्रोत",
   "settings_sources": "सूत्रों का कहना है",
   "settings_academy": "अकादमी",
@@ -319,6 +319,7 @@
   "account_password_reset_not_implemented": "पासवर्ड रीसेट करने की सुविधा अभी तक लागू नहीं की गई है।",
   "account_forgot_password": "पासवर्ड भूल गए?",
   "settings_parameters": "पैरामीटर",
+  "system": "प्रणाली",
   "settings_time": "समय",
   "settings_timeviews": "समय दृश्य",
   "settings_timeline": "समय",
@@ -331,5 +332,37 @@
   "region_date": "तारीख",
   "region_numbers": "नंबर",
   "region_years": "साल",
-  "region_week_starts": "सप्ताह शुरू होता है"
+  "region_week_starts": "सप्ताह शुरू होता है",
+  "date_order": "दिनांक क्रम",
+  "date_order_dmy": "दिन/माह/वर्ष (डीएमवाई)",
+  "date_order_mdy": "माह/दिन/वर्ष (एमडीवाई)",
+  "date_order_ymd": "वर्ष/माह/दिन (YMD)",
+  "number_format": "संख्या स्वरूप",
+  "year_suffixes": "वर्ष प्रत्यय",
+  "year_suffixes_bmk": "बी/एम/के (अंग्रेजी)",
+  "year_suffixes_gama": "गा/मा (वैज्ञानिक)",
+  "year_suffixes_mrd": "Mrd/Mio/T (जर्मन)",
+  "week_starts": "सप्ताह की शुरुआत होती है",
+  "monday": "सोमवार",
+  "sunday": "रविवार",
+  "mouse": "चूहा",
+  "mouse_drag": "खींचना",
+  "mouse_wheel": "पहिया",
+  "pan_timeline": "पैन टाइमलाइन",
+  "zoom_at_cursor": "कर्सर पर ज़ूम करें",
+  "pan_sensitivity": "पैन संवेदनशीलता",
+  "enable_inertia": "घर्षण के बाद संवेग",
+  "touch": "छूना",
+  "drag_touch": "खींचना",
+  "pan": "कड़ाही",
+  "pinch_touch": "चुटकी",
+  "zoom_in_out": "ज़ूम इन/आउट",
+  "zoom_sensitivity": "चुटकी संवेदनशीलता",
+  "enable_pinch_zoom": "ज़ूम करने के लिए पिंच करें",
+  "keyboard": "कीबोर्ड",
+  "pan_left_right": "पैन बाएँ/दाएँ",
+  "fast_pan": "फास्ट पैन (5x)",
+  "jump_to_present": "वर्तमान पर जाएं",
+  "reset_zoom": "ज़ूम रीसेट करें",
+  "invert_arrow_keys": "तीर कुंजियों को उल्टा करें"
 }
