--- a/Jsons/language/ja.json
+++ b/Jsons/language/ja.json
@@ -32,11 +32,11 @@
   "database_show": "データベースを表示",
   "load": "パネルとボックスを積載する",
   "cosmos_show": "背景を切り替える",
-  "cat_being": "いる",
-  "cat_culture": "文化",
-  "cat_power": "力",
-  "cat_science": "科学",
-  "cat_trade": "貿易",
+  "cat_b": "いる",
+  "cat_c": "文化",
+  "cat_p": "力",
+  "cat_s": "科学",
+  "cat_t": "貿易",
   "settings": "設定",
   "wikipedia": "ウィキペディア",
   "toggle_wsbackgd": "背景",
@@ -65,7 +65,7 @@
   "cred_backend": "雲神：",
   "cred_wikipedia": "Wikipediaウィザード：サバト",
   "cred_project": "マインドフルネス：ピエール",
-  "cred_sideral_guru": "シデラル・グル：カロ",
+  "cred_sideral": "シデラル・グル：カロ",
   "settings_source": "ソース",
   "settings_sources": "出典",
   "settings_academy": "アカデミー",
@@ -319,6 +319,7 @@
   "account_password_reset_not_implemented": "パスワードリセット機能はまだ実装されていません",
   "account_forgot_password": "パスワードをお忘れですか？",
   "settings_parameters": "パラメータ",
+  "system": "システム",
   "settings_time": "時間",
   "settings_timeviews": "タイムビュー",
   "settings_timeline": "タイムライン",
@@ -331,5 +332,37 @@
   "region_date": "日付",
   "region_numbers": "数字",
   "region_years": "年",
-  "region_week_starts": "週の始まり"
+  "region_week_starts": "週の始まり",
+  "date_order": "日付順",
+  "date_order_dmy": "日/月/年（DMY）",
+  "date_order_mdy": "月/日/年（MDY）",
+  "date_order_ymd": "年/月/日（YMD）",
+  "number_format": "数値形式",
+  "year_suffixes": "年接尾辞",
+  "year_suffixes_bmk": "B/M/K（英語）",
+  "year_suffixes_gama": "Ga/Ma（科学的）",
+  "year_suffixes_mrd": "Mrd/Mio/T（ドイツ語）",
+  "week_starts": "週の始まり",
+  "monday": "月曜日",
+  "sunday": "日曜日",
+  "mouse": "ねずみ",
+  "mouse_drag": "ドラッグ",
+  "mouse_wheel": "車輪",
+  "pan_timeline": "タイムラインをパン",
+  "zoom_at_cursor": "カーソル位置でズーム",
+  "pan_sensitivity": "パン感度",
+  "enable_inertia": "抗力後の運動量",
+  "touch": "触る",
+  "drag_touch": "ドラッグ",
+  "pan": "パン",
+  "pinch_touch": "ピンチ",
+  "zoom_in_out": "ズームイン/ズームアウト",
+  "zoom_sensitivity": "ピンチ感度",
+  "enable_pinch_zoom": "ピンチしてズーム",
+  "keyboard": "キーボード",
+  "pan_left_right": "左/右にパン",
+  "fast_pan": "高速パン（5倍）",
+  "jump_to_present": "現在地へジャンプ",
+  "reset_zoom": "ズームをリセット",
+  "invert_arrow_keys": "矢印キーを反転"
 }
