--- a/Jsons/language/pl.json
+++ b/Jsons/language/pl.json
@@ -32,11 +32,11 @@
   "database_show": "Pokaż bazę danych",
   "load": "Panele i skrzynki ładunkowe",
   "cosmos_show": "Przełącz tło",
-  "cat_being": "Istnienie",
-  "cat_culture": "Kultura",
-  "cat_power": "Moc",
-  "cat_science": "Nauka",
-  "cat_trade": "Handel",
+  "cat_b": "Istnienie",
+  "cat_c": "Kultura",
+  "cat_p": "Moc",
+  "cat_s": "Nauka",
+  "cat_t": "Handel",
   "settings": "Ustawienia",
   "wikipedia": "Wikipedia",
   "toggle_wsbackgd": "Tło",
@@ -65,7 +65,7 @@
   "cred_backend": "Bóg chmur:",
   "cred_wikipedia": "Czarodziej Wikipedii: Sabat",
   "cred_project": "Uważność: Pierre",
-  "cred_sideral_guru": "Sideral Guru: Caro",
+  "cred_sideral": "Sideral Guru: Caro",
   "settings_source": "Źródło",
   "settings_sources": "Źródła",
   "settings_academy": "Akademia",
@@ -319,6 +319,7 @@
   "account_password_reset_not_implemented": "Funkcja resetowania hasła nie została jeszcze zaimplementowana",
   "account_forgot_password": "Zapomniałeś hasła?",
   "settings_parameters": "Parametry",
+  "system": "system",
   "settings_time": "Czas",
   "settings_timeviews": "Widoki czasowe",
   "settings_timeline": "Oś czasu",
@@ -331,5 +332,37 @@
   "region_date": "Data",
   "region_numbers": "Takty muzyczne",
   "region_years": "Lata",
-  "region_week_starts": "Tydzień się zaczyna"
+  "region_week_starts": "Tydzień się zaczyna",
+  "date_order": "Kolejność dat",
+  "date_order_dmy": "Dzień/Miesiąc/Rok (DMY)",
+  "date_order_mdy": "Miesiąc/Dzień/Rok (MDY)",
+  "date_order_ymd": "Rok/Miesiąc/Dzień (YMD)",
+  "number_format": "Format liczbowy",
+  "year_suffixes": "Sufiksy roku",
+  "year_suffixes_bmk": "B/M/K (angielski)",
+  "year_suffixes_gama": "Ga/Ma (naukowa)",
+  "year_suffixes_mrd": "Mrd/Mio/T (niemiecki)",
+  "week_starts": "Tydzień zaczyna się",
+  "monday": "Poniedziałek",
+  "sunday": "Niedziela",
+  "mouse": "Mysz",
+  "mouse_drag": "Ciągnąć",
+  "mouse_wheel": "Koło",
+  "pan_timeline": "Przesuń oś czasu",
+  "zoom_at_cursor": "Powiększ kursor",
+  "pan_sensitivity": "Czułość panoramowania",
+  "enable_inertia": "Pęd po przeciągnięciu",
+  "touch": "Dotykać",
+  "drag_touch": "Ciągnąć",
+  "pan": "Patelnia",
+  "pinch_touch": "Szczypta",
+  "zoom_in_out": "Powiększ/pomniejsz",
+  "zoom_sensitivity": "Wrażliwość na szczypanie",
+  "enable_pinch_zoom": "szczypnij, aby powiększyć",
+  "keyboard": "Klawiatura",
+  "pan_left_right": "Przesuń w lewo/prawo",
+  "fast_pan": "Szybki obrót (5x)",
+  "jump_to_present": "Przejdź do prezentacji",
+  "reset_zoom": "Zresetuj powiększenie",
+  "invert_arrow_keys": "Odwróć klawisze strzałek"
 }
